-
Bug
-
Resolution: Done
-
P1: Critical
-
5.13.0 Beta2
-
None
-
Win10 1809 /64
-
-
d4fe2fe849a54c3f9fce2e04d314fb70fa37509d (qt/qtwebengine/5.15.4)
Run quicknanobrowser :
5.13 Beta2:
Info: creating stash file C:\dev\sdk\Qt59O\Examples\Qt-5.13.0\webengine\quicknanobrowser\.qmake.stash Running nmake /s /l main.cpp qrc_resources.cpp moc_utils.cpp Generating Code... Running release/quicknanobrowser.exe QQmlApplicationEngine failed to load component qrc:/ApplicationRoot.qml:67 Type BrowserWindow unavailable qrc:/BrowserWindow.qml:502 Cannot assign to non-existent property "onSelectClientCertificate"
5.13 Beta3: Windows, Linux
QQmlApplicationEngine failed to load component qrc:/ApplicationRoot.qml:67 Type BrowserWindow unavailable qrc:/BrowserWindow.qml:421 ".pdfViewerEnabled" is not available due to component versioning.
- duplicates
-
QTBUG-73490 [REG 5.12.1->5.13.0] webengine/quicknanobrowser crashes
-
- Closed
-
- is duplicated by
-
QTBUG-75359 Nano browser randomly(?) crashes
-
- Closed
-
- resulted from
-
QTBUG-74577 WebEngine in 5.13 is not tested/packaged on Windows
-
- Closed
-
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTBUG-74566 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 256578,3 | Fix exporting of WebEngineSettings::pdfViewerEnabled | 5.13 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 259259,2 | Make QtWebEngine imports consistent | 5.13 | qt/qtwebengine | Status: MERGED | +2 | 0 |