Fix exporting of WebEngineSettings::pdfViewerEnabled

The new version of WebEngineSettings wasn't registered

Task-number: QTBUG-74566
Change-Id: I09c184556519743b519788874aefdc5a45755694
Reviewed-by: Michael Brüning <michael.bruning@qt.io>